examples/negative/05_match_missing_result_case.aeth
// Expected diagnostic: MATCH_NON_EXHAUSTIVE missing Err.
function main() returns Unit
  effects log
do
  match Ok(1) do
    case Ok(value) do
      print(intToString(value))
    end
  end
end
